src/styles/globals/form/_input-group-advanced-password.css
.input-group-advanced-password {
    display: grid;
    justify-content: initial;
    grid-gap: var(--input-group-margin-between);
}

.input-group-advanced-password__group {
    width: 100%;
    display: grid;
    position: relative;
}

.input-group-advanced-password .input-group-advanced-password__group:nth-child(2)::after {
    content: "";
    display: var(--input-group-icon-display);
    height: var(--input-group-icon-size);
    width: var(--input-group-icon-size);
    position: var(--input-group-icon-position);
    right: var(--input-group-icon-right);
    top: var(--input-group-icon-top);
    mask-position: center;
    mask-size: contain;
    mask-repeat: no-repeat;
    mask-image: var(--input-group-icon-image);
    background-color: var(--input-group-icon-background-color);
    pointer-events: none;
    z-index: 1;
}

.input-group-advanced-password.input-group--has-success .input-group-advanced-password__group:nth-child(2)::after {
    --input-group-icon-display: block;
    --input-group-icon-background-color: var(--color-success);
    --input-group-icon-image: var(--icon-check-circle);
}

.input-group-advanced-password.input-group--has-error .input-group-advanced-password__group:nth-child(2)::after {
    --input-group-icon-display: block;
    --input-group-icon-background-color: var(--color-error);
    --input-group-icon-image: var(--icon-info);
}

